--- a/css/components/modal.css
+++ b/css/components/modal.css
@@ -13,12 +13,10 @@
 
 html.modal-open {
   overflow: hidden;
-  height: 100%;
 }
 
 html.modal-open body {
   overflow: hidden;
-  height: 100%;
 }
 
 .gallery-modal.active {
